refactor : 컬렉션 반환시 List.copyOf로 변경